# tafl-database

./: .gitignore  Cargo.toml
data/: 3.json
data/games/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  4.json  5.json  6.json  7.json  8.json  9.json
src/: api.rs  database.rs  enums.rs  game.rs  main.rs  rewriter.rs
src/web/: index.html
