[package]
name = "tafl-database"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@savoirfairelinux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
hyper = "0.14.12"
iron = "*"
iron-cors = "0.8.0"
regex = "1"
rmp-serde = "0.15.5"
router = "*"
serde = "1.0.130"
serde_derive = "1.0.127"
serde_json = "1.0"